Fix overflow of note list on medium sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -376,6 +376,10 @@ li.sidebar-collapsed-item-text {
   word-wrap: break-word;
 }
 
+div.sidebar-collapse-content {
+  word-wrap: break-word;
+}
+
 div.sidebar-item-text-container:hover,
 li.sidebar-collapsed-item-text:hover {
   background-color: #1E2230;
